# pracpro2

./: .dockerignore  .gitignore  AGENTS.md  BinTree.hh.gch  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  SECURITY.md  Session.vim  all  cjt_clusters.cc  cjt_clusters.hh  cjt_especies.cc  cjt_especies.hh  cluster.cc  cluster.hh  correct.txt  entr.txt  especie.cc  especie.hh  examen.txt  mytestgame.input  practica.tar  program.cc  salida.txt  sample.cor  sample.inp
.github/: dependabot.yml
docs/: annotated.html  cjt__clusters_8cc_source.html  cjt__clusters_8hh.html  cjt__clusters_8hh__incl.md5  cjt__clusters_8hh_source.html  cjt__especies_8cc__incl.map  cjt__especies_8cc_source.html  cjt__especies_8hh__incl.md5  cjt__especies_8hh_source.html  classcjt__clusters-members.html  classcjt__especies-members.html  classcluster-members.html  classcluster.html  classes.html  classespecie.html  cluster_8cc__incl.md5  cluster_8hh.html  cluster_8hh_source.html  especie_8cc.html  especie_8cc__incl.md5  especie_8hh.html  functions.html  functions_vars.html  globals_func.html  index.html
html/: _bin_tree_8hh.html  _bin_tree_8hh__incl.map  _bin_tree_8hh_source.html  annotated.html  cjt__clusters_8cc.html  cjt__clusters_8cc__incl.map  cjt__clusters_8cc__incl.md5  cjt__clusters_8cc_source.html  cjt__clusters_8hh.html  cjt__clusters_8hh__incl.map  cjt__clusters_8hh_source.html  cjt__especies_8cc.html  cjt__especies_8cc__incl.map  cjt__especies_8cc__incl.md5  cjt__especies_8cc_source.html  cjt__especies_8hh.html  cjt__especies_8hh__incl.map  cjt__especies_8hh_source.html  class_bin_tree-members.html  class_bin_tree.html  classcjt__clusters-members.html  classcjt__clusters.html  classcjt__especies-members.html  classcjt__especies.html  classcluster-members.html  classcluster.html  classes.html  classespecie-members.html  classespecie.html  cluster_8cc.html  cluster_8cc__incl.map  cluster_8cc_source.html  cluster_8hh.html  cluster_8hh_source.html  especie_8cc.html  especie_8cc__incl.map  especie_8cc_source.html  especie_8hh.html  especie_8hh_source.html  files.html  (+14 more)
latex/: _bin_tree_8hh.tex  _bin_tree_8hh_source.tex  annotated.tex  cjt__clusters_8cc.tex  cjt__clusters_8cc__incl.md5  cjt__clusters_8cc_source.tex  cjt__clusters_8hh.tex  cjt__clusters_8hh__incl.md5  cjt__clusters_8hh_source.tex  cjt__especies_8cc.tex  cjt__especies_8cc__incl.md5  cjt__especies_8cc_source.tex  cjt__especies_8hh.tex  cjt__especies_8hh__incl.md5  cjt__especies_8hh_source.tex  class_bin_tree.tex  classcjt__clusters.tex  classcjt__especies.tex  classcluster.tex  classespecie.tex  cluster_8cc.tex  cluster_8cc__incl.md5  cluster_8cc_source.tex  cluster_8hh.tex  cluster_8hh_source.tex  especie_8cc.tex  especie_8cc__incl.md5  especie_8cc_source.tex  especie_8hh.tex  especie_8hh_source.tex  files.tex  index.tex  program_8cc.tex  program_8cc__incl.md5  program_8cc_source.tex  refman.tex  struct_bin_tree_1_1_node.tex
observability/: .env.honeycomb.example  .gitignore  QUERIES.md  README.md  SCENARIOS.md  (+1 more)
web/backend/: Cargo.toml
web/backend/src/: main.rs  observability.rs
(+202 files in other folders)
